完成音乐接口优化，添加音乐时会对歌手，专辑，音乐名进行比对。如果不相同才会添加音乐。其他则为更新音乐