@@ -14,7 +14,6 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.*;
-import java.util.stream.Collectors;
 
 /**
  * 歌单中间层
@@ -278,11 +277,11 @@ public class CollectApi {
         List<Long> musicIds = page.getRecords()
                                   .stream()
                                   .map(TbCollectMusicPojo::getMusicId)
-                                  .collect(Collectors.toList());
-        List<TbMusicPojo> tbMusicPojos = musicService.listByIds(musicIds);
-        
+                                  .toList();
+        List<TbMusicPojo> tbMusicPojoList = musicService.listByIds(musicIds);
+    
         Page<TbMusicPojo> musicPojoPage = new Page<>();
-        musicPojoPage.setRecords(tbMusicPojos);
+        musicPojoPage.setRecords(tbMusicPojoList);
         musicPojoPage.setCurrent(page.getCurrent());
         musicPojoPage.setTotal(page.getTotal());
         musicPojoPage.setSize(page.getSize());
@@ -317,7 +316,7 @@ public class CollectApi {
             List<TbCollectMusicPojo> collect = tbMusicPojo.stream()
                                                           .map(tbMusicPojo1 -> new TbCollectMusicPojo().setCollectId(
                                                                   collectId).setMusicId(tbMusicPojo1.getId()))
-                                                          .collect(Collectors.toList());
+                                                          .toList();
             collectMusicService.saveBatch(collect);
         } else {
             // 删除歌曲
@@ -378,6 +377,6 @@ public class CollectApi {
     public List<Long> likelist(Long uid) {
         List<TbLikeMusicPojo> list = likeMusicService.list(Wrappers.<TbLikeMusicPojo>lambdaQuery()
                                                                    .eq(TbLikeMusicPojo::getLikeId, uid));
-        return list.stream().map(TbLikeMusicPojo::getLikeId).collect(Collectors.toList());
+        return list.stream().map(TbLikeMusicPojo::getLikeId).toList();
     }
 }
