@@ -26,7 +26,6 @@ import org.web.controller.BaseController;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 /**
  * <p>
@@ -104,13 +103,13 @@ public class UserController extends BaseController {
             return neteaseResult.success();
         }
         // 导出歌单id
-        List<Long> collectIds = collectPojoList.stream().map(TbCollectPojo::getId).collect(Collectors.toList());
+        List<Long> collectIds = collectPojoList.stream().map(TbCollectPojo::getId).toList();
         // 根据歌单和tag的中间表来获取tag id列表
         List<TbCollectTagPojo> collectIdAndTagsIdList = collect.getCollectTagIdList(collectIds);
         // 根据tag id 列表获取tag Name列表
         List<Long> tagIdList = collectIdAndTagsIdList.stream()
                                                      .map(TbCollectTagPojo::getTagId)
-                                                     .collect(Collectors.toList());
+                                                     .toList();
         List<TbTagPojo> collectTagList = collect.getTagPojoList(tagIdList);
         
         
@@ -137,9 +136,8 @@ public class UserController extends BaseController {
                 List<String> tags = collectIdAndTagsIdList.stream()
                                                           .filter(tbCollectTagPojo -> tbCollectTagPojo.getCollectId()
                                                                                                       .equals(tbCollectPojo.getId()))
-                                                          .map(tbCollectTagPojo -> getTags(tbCollectTagPojo.getTagId(),
-                                                                  collectTagList))
-                                                          .collect(Collectors.toList());
+                                                          .map(tbCollectTagPojo -> getTags(tbCollectTagPojo.getTagId(), collectTagList))
+                                                          .toList();
                 item.setTags(tags);
             }
             // 歌单名
@@ -196,6 +194,6 @@ public class UserController extends BaseController {
                 return tag.getTagName();
             }
         }
-        return null;
+        return "";
     }
 }
